Feature: CustomException을 활용한 회원 가입 예외 처리 추가
- 이메일 및 핸드폰 번호 중복 시 RuntimeException 대신 CustomException을 던지도록 수정